--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Change SSA/ASS subtitle styles",
   "author": "Eugene Sharygin <eush77@gmail.com>",
   "license": "MIT",
+  "bin": {
+    "ass-restyler": "cli.js"
+  },
+  "preferGlobal": true,
   "homepage": "https://github.com/eush77/ass-restyler",
   "repository": {
     "type": "git",
@@ -21,6 +25,9 @@
     "subtitles",
     "cli"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "ass-parser": "^0.1.0",
+    "concat-stream": "^1.4.7"
+  },
   "devDependencies": {}
 }
