--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "dependencies": {
     "ass-parser": "^0.1.0",
+    "ass-stringify": "^0.1.0",
     "concat-stream": "^1.4.7"
   },
   "devDependencies": {}
