--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "name": "ass-restyler",
   "version": "0.0.1",
-  "description": "Change SSA/ASS subtitle styles (from the command line)",
+  "description": "Change SSA/ASS subtitle styles",
   "author": "Eugene Sharygin <eush77@gmail.com>",
   "license": "MIT",
-  "preferGlobal": true,
-  "bin": {
-    "ass-restyler": "cli.js"
-  },
   "files": [
-    "cli.js",
+    "index.js",
     "src"
   ],
   "homepage": "https://github.com/eush77/ass-restyler",
@@ -26,13 +22,8 @@
     "subtitle",
     "style",
     "styles",
-    "subtitles",
-    "cli"
+    "subtitles"
   ],
-  "dependencies": {
-    "ass-parser": "^0.1.0",
-    "ass-stringify": "^0.1.0",
-    "concat-stream": "^1.4.7"
-  },
+  "dependencies": {},
   "devDependencies": {}
 }
